@@ -82,6 +82,8 @@
     <Compile Include="Patches\Patcher.cs" />
     <Compile Include="Patches\InitializePrefab.cs" />
     <Compile Include="Patches\InitPrefabTranspiler.cs" />
+    <Compile Include="Settings\SettingsXML.cs" />
+    <Compile Include="Settings\UpdateNotification.cs" />
     <Compile Include="Translations.cs" />
     <Compile Include="ConvertPrefabs.cs" />
     <Compile Include="GUI\CategoryUtils.cs" />
